[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/player/Weapon.gd" type="Script" id=1]
[ext_resource path="res://assets/modified/guns.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/reload.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/bow.ogg" type="AudioStream" id=4]

[node name="Weapon" type="Node2D"]
script = ExtResource( 1 )

[node name="FireTimer" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 40, 0 )
hframes = 8
frame = 1

[node name="ShootyBit" type="Node2D" parent="Sprite"]
position = Vector2( 55.6984, -0.539645 )
scale = Vector2( 2, 2 )

[node name="AmmoEject" type="Node2D" parent="Sprite"]
position = Vector2( 42.3649, 1.5749 )

[node name="GunSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 55.4366, -0.472469 )
stream = ExtResource( 4 )
bus = "sounds"

[node name="ReloadTimer" type="Timer" parent="."]

[node name="ReloadSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 41.1049, 1.41741 )
stream = ExtResource( 3 )
bus = "sounds"
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
